Begin update for 1.18, tags are disabled